app/assets/stylesheets/app/pages/supporters/_supporter.scss
$namespace: ".pk-supporter";

#{$namespace} {
  text-decoration: none;
  position: relative;
  z-index: 1;
  margin-bottom: 16px;
  background-clip: content-box;
  overflow: hidden;
  font-size: 0.875rem;
  color: #FCF7EF;
  border: 2px solid rgba(#FFF4DA, .25);
  border-radius: 40px;
  padding: 0 56px 40px 56px;

  flex: 0 0 48%;
  margin-bottom: 16px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  @include breakpoint-max(719) {
    flex: 0 0 100%;
  }

  &:before {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    z-index: -1;
  }

  &:hover, &:active, &:focus {
    text-decoration: none;
    color: #44002F;
    &:before {
      background: #FCF7EF;
    }
  }
}

#{$namespace}__image {
  width: 300px;
  height: 170px;
  position: relative;
  overflow: hidden;
  flex: 0 0 auto;
  img, canvas {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate3d(-50%,-50%,0);
    width: 100%;
    transition: opacity .2s ease-out;
  }

  @include breakpoint-max(920) {
    width: 200px;
    height: 112px;
  }

  @include breakpoint-max(719) {
    width: 300px;
    height: 170px;
  }
}

#{$namespace}__text {
  flex: 0 0 auto;
  text-align: left;
}

#{$namespace}-wrapper {
  justify-content: space-between;

  @include breakpoint-max(320) {
    flex-direction: column;
  }
}

